--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,8 @@
         "laravel/ui": "^4.4",
         "livewire/livewire": "^3.4",
         "mews/captcha": "^3.3",
-        "spatie/laravel-activitylog": "^4.7"
+        "spatie/laravel-activitylog": "^4.7",
+        "spatie/laravel-permission": "^6.3"
     },
     "require-dev": {
         "barryvdh/laravel-ide-helper": "^2.14",
