--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,8 @@
         "livewire/livewire": "^3.4",
         "mews/captcha": "^3.3",
         "spatie/laravel-activitylog": "^4.7",
-        "spatie/laravel-permission": "^6.3"
+        "spatie/laravel-permission": "^6.3",
+        "wire-elements/modal": "^2.0"
     },
     "require-dev": {
         "barryvdh/laravel-ide-helper": "^2.14",
